test/ui/test/name-resolution/mistyped-namespace.lushui
use extern.core.list.List

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

use true-treasures-of-life.Friendship

module the-true-treasures-of-life of

    @public
    data Friendship: Type of

true-treasures-of-life: List Type = List.empty Type

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

module shared-spaces of
    @public data One: Type of

shared-spades: List Type = List.empty Type

use shared-spades.One

